Enum tipo_imovel {
  APARTAMENTO
  CASA
  ESTUDIO
}

Enum status_orcamento {
  PENDENTE
  APROVADO
  REJEITADO
  CONCLUIDO
}

Enum status_parcelamento {
  A_VISTA
  PARCELADO
}

Table imovel {
  id int [pk]
  tipo tipo_imovel [not null]
  endereco varchar(255) [not null]
  quartos int
  banheiros int
  metragem decimal(10,2)
  vagas_garagem int
  descricao text
}

Table locatario {
  id int [pk]
  nome varchar(255) [not null]
  email varchar(255)
  telefone varchar(20)
  tem_filhos boolean [not null, default: false]
}

Table corretor {
  id int [pk]
  nome varchar(255) [not null]
  creci varchar(20)
  email varchar(255)
  telefone varchar(20)
}

Table orcamento {
  id int [pk]
  imovel_id int [not null, ref: > imovel.id]
  locatario_id int [not null, ref: > locatario.id]
  corretor_id int [ref: > corretor.id]
  parcelar boolean [not null, default: false]
  num_parcelas_contrato int
  aluguel_base decimal(10,2) [not null]
  valor_acrescimos decimal(10,2) [not null, default: 0]
  valor_desconto decimal(10,2) [not null, default: 0]
  valor_garagem decimal(10,2) [not null, default: 0]
  taxa_contrato decimal(10,2) [not null, default: 0]
  valor_total_mensal decimal(10,2) [not null]
  parcela_contrato decimal(10,2) [not null, default: 0]
  status status_orcamento [not null]
  criado_em timestamp [not null]
}

Table parcela {
  id int [pk]
  orcamento_id int [not null, ref: > orcamento.id]
  numero int [not null]
  valor decimal(10,2) [not null]
}